# zoho-mail-manager

./: .env.example  .gitignore  README.md  pyproject.toml  zoho.py  zoho_aliases.py
.claude/: settings.local.json
Formula/: zoho.rb
