[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "zoho-mail"
version = "1.0.0"
description = "Manage Zoho Mail email aliases from the command line"
requires-python = ">=3.11"
dependencies = ["requests>=2.31", "python-dotenv>=1.0"]

[project.scripts]
zoho = "zoho:main"

[tool.setuptools]
py-modules = ["zoho"]
